# NovelSynth

./: .gitignore  CLAUDE.md  DEV.md  DEV_GUIDE.md  LICENSE  README.md  pyproject.toml  start.sh
app/: config.py  llm_client.py  llm_config.py  main.py  storage.py  task_manager.py
app/models/: context.py  dehydration.py  qa.py
app/modules/dehydration/: prompt.py  service.py
app/modules/indexer/: chapter_parser.py  epub_parser.py  extractor.py  merger.py  service.py
app/modules/qa_assistant/: service.py
app/routes/: books.py  dehydrate.py  index.py  qa.py  settings.py  tasks.py
app/static/: app.css  app.js  context.html  index.html  read.html  task.html
app/utils/: epub_builder.py
codestable/architecture/: AGENTS.md  ARCHITECTURE.md
codestable/compound/: 2026-04-25-learning-novel-dehydrator-text-processing-patterns.md  novel-dehydrator-decisions.md
codestable/feature/2026-04-25-novel-dehydrator-mvp/: 2026-04-25-novel-dehydrator-mvp-checklist.yaml  2026-04-25-novel-dehydrator-mvp-design.md
codestable/reference/: api-reference.md  shared-conventions.md
docs/: HANDOVER-v0.2.md
tools/: extract_chapters.py
