[project]
name = "novelsynth"
version = "0.3.0"
description = "NovelSynth - AI-powered novel condensation engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
